manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobbytracker-dep
  namespace: evaluationharness-ohtu-s2026
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "evaluationharness-ohtu-s2026:staging",
            "namespace": "evaluationharness-ohtu-s2026"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"lobbytracker\")].image",
          "paused": false
        },
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "evaluationharness-ohtu-s2026:staging",
            "namespace": "evaluationharness-ohtu-s2026"
          },
          "fieldPath": "spec.template.spec.initContainers[?(@.name==\"db-init\")].image",
          "paused": false
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lobbytracker
  template:
    metadata:
      labels:
        app: lobbytracker
    spec:
      containers:
        - name: lobbytracker
          image: ghcr.io/lobbytracker/lobbytracker:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
