manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lobbytracker-svc
spec:
  selector:
    app: lobbytracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  
  type: ClusterIP
